<resources>
    <string name="app_name">frpc</string>
    <string name="start_frpc">start frpc</string>
    <string name="quit">QUIT</string>
    <string name="server_addr">server_addr</string>
    <string name="server_port">server_port</string>
    <string name="token">token</string>
    <string name="type">type</string>
    <string name="local_ip">local_ip</string>
    <string name="local_port">local_port</string>
    <string name="remote_port">remote_port</string>
    <string name="common">[common]</string>

    <string name="local_config">[本地服务配置]</string>

    <string name="local_config_name">服务名称</string>
    <string name="local_config_name_hint">字母和数字下划线组合</string>
    <string name="reset_frpc">重置配置</string>

    <string name="ts_load_default_config_success">重载默认配置成功</string>
    <string name="ts_load_default_config_fail">重载默认配置失败</string>
    <string name="frpc_status_running">frpc is running</string>
    <string name="frpc_status_starting">frpc starting ...</string>
    <string name="frpc_status_started">frpc already started</string>
    <string name="frpc_status_stopped">frpc stopped</string>
    <string name="login">登录</string>
    <string name="preview">预览</string>
    <string name="ip">192.168.0.103</string>
    <string name="pwd">HikCDJDNF</string>
    <string name="stop">停止</string>
    <string name="ok">确定</string>
    <string name="leftMove">左旋转</string>
    <string name="rightMove">右旋转</string>
    <string name="upMove">上旋转</string>
    <string name="downMove">下旋转</string>
    <string name="确认">ok</string>
    <string name="cancel">取消</string>
    <string name="setting">设置</string>
    <string name="inputPwd">请输入密码</string>
</resources>