<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/white">


        <TextView
            android:id="@+id/tv_common"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/common"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_s_addr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/et_s_addr"
            android:layout_alignBottom="@id/et_s_addr"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/server_addr"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_s_addr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_common"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/tv_s_addr"
            android:hint="@string/server_addr"
            android:maxLines="1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_s_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/et_s_port"
            android:layout_alignBottom="@id/et_s_port"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/server_port"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_s_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_s_addr"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/tv_s_port"
            android:hint="@string/server_port"
            android:maxLines="1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_s_token"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/et_s_token"
            android:layout_alignBottom="@id/et_s_token"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/token"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_s_token"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_s_port"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/tv_s_token"
            android:hint="@string/token"
            android:maxLines="1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_l_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_s_token"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/local_config"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_l_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/et_l_name"
            android:layout_alignBottom="@id/et_l_name"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/local_config_name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_l_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_l_config"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/tv_l_name"
            android:hint="@string/local_config_name_hint"
            android:maxLines="1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_l_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/et_l_type"
            android:layout_alignBottom="@id/et_l_type"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/type"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_l_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_l_name"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/tv_l_type"
            android:hint="@string/type"
            android:maxLines="1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_l_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/et_l_ip"
            android:layout_alignBottom="@id/et_l_ip"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/local_ip"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_l_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_l_type"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/tv_l_ip"
            android:hint="@string/local_ip"
            android:maxLines="1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_l_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/et_l_port"
            android:layout_alignBottom="@id/et_l_port"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/local_port"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_l_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_l_ip"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/tv_l_port"
            android:hint="@string/local_port"
            android:maxLines="1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_r_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/et_r_port"
            android:layout_alignBottom="@id/et_r_port"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/remote_port"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_r_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_l_port"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/tv_r_port"
            android:hint="@string/remote_port"
            android:maxLines="1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/frpc_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_r_port"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:onClick="onButtonClick"
            android:text="@string/start_frpc"
            android:textSize="20sp" />

        <Button
            android:id="@+id/frpc_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_r_port"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/frpc_start"
            android:onClick="onButtonClick"
            android:text="@string/reset_frpc"
            android:textSize="20sp" />

        <Button
            android:id="@+id/frpc_quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_r_port"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/frpc_reset"
            android:onClick="onButtonClick"
            android:text="@string/quit"
            android:textSize="20sp" />


    </RelativeLayout>

</ScrollView>